# DUTS2-OOP-BokoRunner

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Changelog.txt  Doxyfile  README.md  build.sh  readme_licences.txt
runner/: CMakeLists.txt  main.cpp  scores1-after.txt  scores1.txt  unit_test.cpp
runner/Fonts/: english.xml  french.xml  spanish.xml
runner/Images/: readme images.txt  readme_images.txt
runner/Music/: readme_images.txt
runner/Resources/: english.xml  french.xml  spanish.xml
runner/Sources/: AnimatedGraphicElement.cpp  AnimatedGraphicElement.h  Bonus.cpp  Button.cpp  Button.h  Coin.cpp  Coin.h  DataBase.cpp  DataBase.h  Dialog.cpp  Dialog.h  Enemy.cpp  Enemy.h  GameModel.cpp  GameModel.h  GameView.cpp  GameView.h  GraphicElement.h  ImagesConstants.h  Intro.cpp  Leaderboard.cpp  Leaderboard.h  LeaderboardView.cpp  LeaderboardView.h  MenuModel.cpp  MenuView.cpp  MenuView.h  Model.cpp  MovableElement.cpp  MovableElement.h  PixelateEffect.cpp  PixelateEffect.h  Player.cpp  Player.h  Settings.cpp  SettingsView.cpp  SettingsView.h  Shop.cpp  Shop.h  ShopItem.cpp  (+11 more)
runner/header/: AnimatedGraphicElement.h  Ball.h  Bonus.h  Button.h  Coin.h  DataBase.h  DataModel.h  Dialog.h  Enemy.h  Ennemy.h  GameModel.h  GameView.h  GraphicElement.h  Intro.h  Leaderboard.h  LeaderboardView.h  Menu.h  MenuModel.h  MenuView.h  Model.h  MovableElement.h  PixelateEffect.h  Player.h  Screen.h  SettingsView.h  Shop.h  ShopItem.h  ShopItemCard.h  ShopView.h  SlidingBackground.h  Text.h  View.h
runner/src/: AnimatedGraphicElement.cpp  Ball.cpp  Bonus.cpp  Button.cpp  Coin.cpp  DataBase.cpp  DataModel.cpp  Dialog.cpp  Enemy.cpp  Ennemy.cpp  GameModel.cpp  GameView.cpp  GraphicElement.cpp  Intro.cpp  Leaderboard.cpp  LeaderboardView.cpp  Menu.cpp  MenuModel.cpp  MenuView.cpp  Model.cpp  MovableElement.cpp  PixelateEffect.cpp  Player.cpp  Screen.cpp  Settings.cpp  SettingsView.cpp  Shop.cpp  ShopItem.cpp  ShopItemCard.cpp  ShopView.cpp  SlidingBackground.cpp  Text.cpp  View.cpp
src/: CMakeLists.txt  constants.h  main.cpp
src/app/: main.cpp  main_cli.cpp
src/app/enum/: AppState.h  MovableElementType.h  MovingDirection.h  PlayerState.h  SettingsPage.h  Zone.h
src/app/localization/: LocalizationException.h  LocalizationManager.cpp  LocalizationManager.h
src/app/model/: AbstractModel.h  AppCore.cpp  AppCore.h  Bonus.cpp  Bonus.h  Coin.h  CommandsModel.cpp  CommandsModel.h  DataBase.cpp  DataBase.h  Enemy.cpp  Enemy.h  GameModel.cpp  GameModel.h  Leaderboard.cpp  Leaderboard.h  LeaderboardModel.cpp  LeaderboardModel.h  MenuModel.cpp  MenuModel.h  MovableElement.cpp  MovableElement.h  PersistenceManager.cpp  PersistenceManager.h  Player.cpp  Player.h  Settings.cpp  SettingsModel.cpp  SettingsModel.h  Shop.cpp  Shop.h  ShopItem.cpp  ShopItem.h  ShopModel.cpp  ShopModel.h  SplashScreenModel.cpp  SplashScreenModel.h
src/app/model/core/: AppCore.cpp  AppCore.h  ModelConstants.cpp  ModelConstants.h
src/app/model/enums/: Difficulty.h  GameState.h  MenuState.h  MovableElementType.h  MovingDirection.h
src/app/model/game-components/: Bonus.cpp  Bonus.h  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  MovableElement.cpp  MovableElement.h  Player.cpp  Player.h
src/app/model/menu-components/: ShopItem.cpp  ShopItem.h
src/app/model/models/: AbstractModel.cpp  AbstractModel.h  CommandsModel.cpp  CommandsModel.h  GameModel.cpp  GameModel.h  LeaderboardModel.cpp  (+9 more)
src/app/persistence/: FileBasedPersistence.cpp  FileBasedPersistence.h  PersistenceException.h  PersistenceManager.cpp  PersistenceManager.h
src/app/utils/: AppColor.cpp  AppColor.h  DialogBuilder.h  RandomUtils.h  constants.h  definitions.h
src/app/view/: AbstractView.cpp  AbstractView.h  AnimatedSprite.cpp  AnimatedSprite.h  AppColor.h  AppTextManager.cpp  AppTextManager.h  CommandsView.cpp  CommandsView.h  GameView.cpp  GameView.h  LeaderboardView.cpp  LeaderboardView.h  MenuView.cpp  MenuView.h  PixelShader.cpp  PixelShader.h  ScrollingBackground.cpp  ScrollingBackground.h  SettingsView.cpp  SettingsView.h  ShopDialog.cpp  ShopDialog.h  ShopItemCard.cpp  ShopItemCard.h  ShopView.cpp  ShopView.h  SplashScreenView.cpp  SplashScreenView.h  TextHandler.cpp  TextHandler.h
src/enum/: AppState.h  Difficulty.h  GameState.h  LabelPosition.h  MenuState.h  MovableElementType.h  PlayerState.h  SettingsPage.h  Zone.h
src/libs/Logger/: Logger.cpp  Logger.h
src/libs/MDC-SFML/: Button.cpp  Button.h  Color.h  Config.h  Dialog.cpp  Dialog.h  LabelPosition.h  RadioButton.cpp  RadioButton.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
src/libs/XMLHelper/: XMLHelper.cpp  XMLHelper.h
src/libs/XMLPersistenceHelper/: XMLPersistenceHelper.cpp  XMLPersistenceHelper.h
src/model/: AbstractModel.cpp  AbstractModel.h  Bonus.cpp  Bonus.h  Coin.cpp  Coin.h  Commands.cpp  Commands.h  DataBase.cpp  DataBase.h  Enemy.cpp  Enemy.h  GameModel.cpp  GameModel.h  IntroModel.cpp  IntroModel.h  Leaderboard.cpp  Leaderboard.h  MenuModel.cpp  MenuModel.h  Model.cpp  Model.h  MovableElement.cpp  MovableElement.h  Player.cpp  Player.h  Settings.cpp  Settings.h  Shop.cpp  Shop.h  ShopItem.cpp  ShopItem.h  SplashScreenModel.cpp  SplashScreenModel.h
src/utils/: DialogBuilder.h  constants.h  definitions.h
src/view/: AbstractView.cpp  AbstractView.h  AnimatedGraphicElement.cpp  AnimatedGraphicElement.h  AnimatedSprite.cpp  AnimatedSprite.h  Button.cpp  Button.h  CommandsView.cpp  CommandsView.h  Dialog.cpp  Dialog.h  GameView.cpp  GameView.h  GraphicElement.cpp  GraphicElement.h  ImagesConstants.h  Intro.cpp  Intro.h  IntroView.cpp  IntroView.h  LeaderboardView.cpp  LeaderboardView.h  MenuView.cpp  MenuView.h  PixelShader.cpp  PixelShader.h  PixelateEffect.cpp  PixelateEffect.h  RadioButton.cpp  RadioButton.h  ScrollingBackground.cpp  ScrollingBackground.h  SettingsView.cpp  SettingsView.h  ShopDialog.cpp  ShopDialog.h  ShopItemCard.cpp  ShopItemCard.h  ShopView.cpp  (+13 more)
test/: CMakeLists.txt
test/app/core/: TestCore.cpp  TestCore.h
test/app/persistence/: test_FileBasedPersistence.cpp  test_PersistenceManager.cpp
test/libs/XMLHelper/: test_XMLHelper.cpp
(+1153 files in other folders)
